--- a/Examen2/index.html
+++ b/Examen2/index.html
@@ -41,7 +41,7 @@
 <!-- Ici commence le deuxiènme container - Bannière du site- -->
 <div class="container-fluid " id="banniere" >
     <div class="row">
-        <div class="centrerTitre">
+        <div class="centrerTitre" >
                 <h1>
                     The Witcher 3
                 </h1>
@@ -81,6 +81,7 @@
     <div class="row">
 
         <div class="col-12 col-sm-6 col-md-6 col-lg-3 col-xl-3">
+            <h3>Livres</h3>
             <img src="img/witcherLivre1.jpg"/>
         </div>
         <div class="col-12 col-sm-6 col-md-6 col-lg-3 col-xl-3">
@@ -117,7 +118,7 @@
     </div>
         <hr>,
     <div class="row no-gutters">
-        <div class="col-4 col-md-4 col-lg-4 fondRouge">
+        <div class="col-4 col-md-4 col-lg-4">
             <img src="img/piedPage.png"id="piedPage"/>
         </div>
         <div class="col-1 col-sm-1 col-md-1 col-lg-1 col-xl-1 ">
