--- a/Examen2/index.html
+++ b/Examen2/index.html
@@ -41,12 +41,12 @@
 <!-- Ici commence le deuxiènme container - Bannière du site- -->
 <div class="container-fluid " id="banniere" >
     <div class="row">
-        <div class="centrerTitre" >
-                <h1>
+
+        <div class= "col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 ">
+                <h1 class="centrerTitre">
                     The Witcher 3
                 </h1>
-            <br/>
-                <h2>
+                <h2 class="centrerTitre">
                     The Wild Hunt
                 </h2>
         </div>
