--- a/Examen2/index.html
+++ b/Examen2/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!-- index.html -->
 <!-- Par Komlan Albert Gblokpor-Koffi -->
-<!-- Le 03-06-2020 -->
+<!-- Le 06-06-2020 -->
 <html lang="fr-ca">
 <head>
     <meta charset="UTF-8">
@@ -30,7 +30,7 @@
         <div class=" col-12  col-sm-2 col-md-2 col-lg-2 col-xl-2 p-5" id="E-Sport">
             E-Sport
         </div>
-        <div class=" col-12  col-sm-2 offset-sm-7 col-md-2 offset-md-7 col-lg-2 offset-lg-0 col-xl-2 offset-xl-0  p-5" id="Communauté">
+        <div class=" col-12 offset-0 col-sm-2 offset-sm-7 col-md-2 offset-md-7 col-lg-2 offset-lg-0 col-xl-2 offset-xl-0  p-5" id="Communauté">
             Communauté
         </div>
         <div class=" col-12 col-md-2 col-lg-2 col-xl-2 p-5 " id="Boutique">
@@ -41,7 +41,6 @@
 <!-- Ici commence le deuxiènme container - Bannière du site- -->
 <div class="container-fluid " id="banniere" >
     <div class="row">
-
         <div class= "col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 ">
                 <h1 class="centrerTitre">
                     The Witcher 3
@@ -62,7 +61,6 @@
     </div>
     <hr>
     <!-- code à revoir surtout au niveau de lg. - -->
-
     <div class="row">
         <div class=" col-12 col-sm-6 col-md-6  col-lg-4 col-xl-4 ">
             <img src="img/witcher1.jpg"/>
@@ -76,12 +74,17 @@
 </div>
 <!-- Ici commence le quatrieme container - présentation des livres - -->
 <!-- Revérifié si les livres sont bien placés- -->
+<div class="container text-center">
+    <div class="row">
+        <h3>
+            Livres
+        </h3>
 
+    </div>
+    <hr>
 <div class="container ">
     <div class="row">
-
         <div class="col-12 col-sm-6 col-md-6 col-lg-3 col-xl-3">
-            <h3>Livres</h3>
             <img src="img/witcherLivre1.jpg"/>
         </div>
         <div class="col-12 col-sm-6 col-md-6 col-lg-3 col-xl-3">
@@ -106,7 +109,6 @@
             <img src="img/witcherLivre8.jpg"/>
         </div>
     </div>
-
 </div>
 <!-- Ici commence le cinquième container - pied de page - -->
 
@@ -116,7 +118,7 @@
             NOUS JOINDRE
         </div>
     </div>
-        <hr>,
+        <hr>
     <div class="row no-gutters">
         <div class="col-4 col-md-4 col-lg-4">
             <img src="img/piedPage.png"id="piedPage"/>
@@ -133,11 +135,8 @@
         <div class="col-1 col-sm-1 col-md-1 col-lg-1 col-xl-1 ">
             <i class="fab fa-youtube-square" id="Youtube"></i>
         </div>
-
     </div>
-
 </div>
-
 
 <script src="https://kit.fontawesome.com/a46d75ba7a.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
