--- a/Examen2/index.html
+++ b/Examen2/index.html
@@ -18,22 +18,22 @@
 <div class="container-fluid text-center">
     <div class="row">
         <!-- Ajout d'un padding top de 3 au colonnes du menu sans utiliser directement  du css- -->
-        <div class=" col-12  col-sm-6 col-md-6 col-lg-2 col-xl-2 pt-3" >
+        <div class=" col-12   col-md-6 col-lg-2 col-xl-2 pt-3" >
             <img src="img/logo.png" id="logo"/>
         </div>
-        <div class=" col-12  col-sm-2 col-md-2 col-lg-2 col-xl-2 pt-3" id="jeux">
+        <div class=" col-12  col-md-2 col-lg-2 col-xl-2 pt-3" id="jeux">
            Jeux
         </div>
-        <div class=" col-12 col-sm-2 col-md-2 col-lg-2 col-xl-2 pt-3" id="Livre">
+        <div class=" col-12  col-md-2 col-lg-2 col-xl-2 pt-3" id="Livre">
             Livres
         </div>
-        <div class=" col-12  col-sm-2 col-md-2 col-lg-2 col-xl-2 pt-3" id="E-Sport">
+        <div class=" col-12  col-md-2 col-lg-2 col-xl-2 pt-3" id="E-Sport">
             E-Sport
         </div>
-        <div class=" col-12 offset-0 col-sm-2 offset-sm-7 col-md-2 offset-md-7 col-lg-2 offset-lg-0 col-xl-2 offset-xl-0  pt-3" id="Communauté">
+        <div class=" col-12 offset-0 col-md-2 offset-md-7 col-lg-2 offset-lg-0 col-xl-2 offset-xl-0  pt-3" id="Communauté">
             Communauté
         </div>
-        <div class=" col-12 col-md-2 col-lg-2 col-xl-2 pt-3" id="Boutique">
+        <div class=" col-12 col-lg-2 col-xl-2 pt-3" id="Boutique">
             Boutique
         </div>
     </div>
