--- a/Examen2/index.html
+++ b/Examen2/index.html
@@ -41,7 +41,7 @@
 <!-- Ici commence le deuxiènme container - Bannière du site- -->
 <div class="container-fluid " id="banniere" >
     <div class="row">
-        <div class= "col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 ">
+        <div class= "col-12  col-md-12 col-lg-12 col-xl-12 ">
                 <h1 class="centrerTitre">
                     The Witcher 3
                 </h1>
@@ -55,19 +55,19 @@
 <!-- Ici commence le troisième container - présentation des jeux- -->
 <div class="container">
     <div class="row">
-        <div class=" col-12 col-sm-3 offset-sm-5 col-md-3 offset-md-5 col-lg-3 offset-lg-0 col-xl-3 offset-xl-0 ">
+        <div class=" col-12  offset-sm-5 col-md-3 offset-md-5 col-lg-3 offset-lg-0 col-xl-3 offset-xl-0 ">
             <h3>Jeux</h3>
         </div>
     </div>
     <hr>
     <!-- code à revoir surtout au niveau de lg. - -->
     <div class="row">
-        <div class=" col-12 col-sm-6 col-md-6  col-lg-4 col-xl-4 ">
+        <div class=" col-12  col-md-6  col-lg-4 col-xl-4 ">
             <img src="img/witcher1.jpg"/>
         </div>
-        <div class=" col-12 col-sm-6 col-md-6 col-lg-4  col-xl-4 ">
+        <div class=" col-12  col-md-6 col-lg-4  col-xl-4 ">
             <img src="img/witcher2.jpg"/></div>
-        <div class=" col-12 col-sm-4 offset-sm-4 col-md-4 offset-md-4 col-lg-4 offset-lg-0 col-xl-4 offset-xl-0 ">
+        <div class=" col-12  col-md-4 offset-md-4 col-lg-4 offset-lg-0 col-xl-4 offset-xl-0 ">
             <img src="img/witcher3.jpg"/>
         </div>
     </div>
@@ -84,28 +84,28 @@
     <hr>
 <div class="container ">
     <div class="row">
-        <div class="col-12 col-sm-6 col-md-6 col-lg-3 col-xl-3">
+        <div class="col-12 col-md-6 col-lg-3 col-xl-3">
             <img src="img/witcherLivre1.jpg"/>
         </div>
-        <div class="col-12 col-sm-6 col-md-6 col-lg-3 col-xl-3">
+        <div class="col-12  col-md-6 col-lg-3 col-xl-3">
             <img src="img/witcherLivre2.jpg"/>
         </div>
-        <div class="col-12 col-sm-6 col-md-6 col-lg-3 col-xl-3">
+        <div class="col-12 col-md-6 col-lg-3 col-xl-3">
             <img src="img/witcherLivre3.jpg"/>
         </div>
-        <div class="col-12 col-sm-6 col-md-6 col-lg-3 col-xl-3">
+        <div class="col-12  col-md-6 col-lg-3 col-xl-3">
             <img src="img/witcherLivre4.jpg"/>
         </div>
-        <div class="col-12 col-sm-6 col-md-6 col-lg-3 col-xl-3">
+        <div class="col-12  col-md-6 col-lg-3 col-xl-3">
             <img src="img/witcherLivre5.jpg"/>
         </div>
-        <div class="col-12 col-sm-6 col-md-6 col-lg-3 col-xl-3">
+        <div class="col-12  col-md-6 col-lg-3 col-xl-3">
             <img src="img/witcherLivre6.jpg"/>
         </div>
-        <div class="col-12 col-sm-6 col-md-6 col-lg-3 col-xl-3">
+        <div class="col-12  col-md-6 col-lg-3 col-xl-3">
             <img src="img/witcherLivre7.jpg"/>
         </div>
-        <div class="col-12 col-sm-6 col-md-6 col-lg-3 col-xl-3">
+        <div class="col-12  col-md-6 col-lg-3 col-xl-3">
             <img src="img/witcherLivre8.jpg"/>
         </div>
     </div>
@@ -114,7 +114,7 @@
 
 <div class="container-fluid text-center">
     <div class="row">
-        <div class="col-12 col-sm-12  col-md-12  col-lg-2 offset-lg-5 col-xl-2 offset-xl-5 " id="NousJoindre">
+        <div class="col-12  col-md-12  col-lg-2 offset-lg-5 col-xl-2 offset-xl-5 " id="NousJoindre">
             NOUS JOINDRE
         </div>
     </div>
@@ -123,16 +123,16 @@
         <div class="col-4 col-md-4 col-lg-4">
             <img src="img/piedPage.png"id="piedPage"/>
         </div>
-        <div class="col-1 col-sm-1 col-md-1 col-lg-1 col-xl-1 ">
+        <div class="col-1  col-md-1 col-lg-1 col-xl-1 ">
             <i class="fab fa-twitter-square" id="Tweeter"></i>
         </div>
-        <div class="col-1 col-sm-1 col-md-1 col-lg-1 col-xl-1">
+        <div class="col-1  col-md-1 col-lg-1 col-xl-1">
             <i class="fab fa-facebook-square" id="facebook"></i>
         </div>
-        <div class="col-1 col-sm-1 col-md-1 col-lg-1 col-xl-1">
+        <div class="col-1  col-md-1 col-lg-1 col-xl-1">
             <i class="fab fa-instagram" id="Instagram"></i>
         </div>
-        <div class="col-1 col-sm-1 col-md-1 col-lg-1 col-xl-1 ">
+        <div class="col-1  col-md-1 col-lg-1 col-xl-1 ">
             <i class="fab fa-youtube-square" id="Youtube"></i>
         </div>
     </div>
