--- a/Examen2/index.html
+++ b/Examen2/index.html
@@ -16,7 +16,7 @@
 <!-- Ici commence le premier container -entête du site- -->
 <!-- se rappeler pour introduire le col.md - -->
 <div class="container-fluid text-center">
-    <div class="row ">
+    <div class="row">
         <!-- Ajout d'un padding top de 3 au colonnes du menu sans utiliser directement  du css- -->
         <div class=" col-12  col-sm-6 col-md-6 col-lg-2 col-xl-2 pt-3" >
             <img src="img/logo.png" id="logo"/>
@@ -56,7 +56,9 @@
 <div class="container">
     <div class="row">
         <div class=" col-12 col-sm-3 offset-sm-5 col-md-3 offset-md-5 col-lg-3 offset-lg-0 col-xl-3 offset-xl-0 ">
-            <h3>Jeux</h3>
+            <h3>
+                Jeux
+            </h3>
         </div>
     </div>
     <hr>
@@ -66,7 +68,8 @@
             <img src="img/witcher1.jpg"/>
         </div>
         <div class=" col-12 col-sm-6 col-md-6 col-lg-4  col-xl-4 ">
-            <img src="img/witcher2.jpg"/></div>
+            <img src="img/witcher2.jpg"/>
+        </div>
         <div class=" col-12 col-sm-4 offset-sm-4 col-md-4 offset-md-4 col-lg-4 offset-lg-0 col-xl-4 offset-xl-0 ">
             <img src="img/witcher3.jpg"/>
         </div>
@@ -120,7 +123,7 @@
     </div>
         <hr>
     <div class="row no-gutters">
-        <div class="col-4 col-md-4 col-lg-4">
+        <div class="col-4 col-sm-4 col-md-4 col-lg-4 col-xl-4">
             <img src="img/piedPage.png"id="piedPage"/>
         </div>
         <div class="col-1 col-sm-1 col-md-1 col-lg-1 col-xl-1 ">
