--- a/Examen2/index.html
+++ b/Examen2/index.html
@@ -61,17 +61,17 @@
             </h3>
         </div>
     </div>
-    <hr>
+    <hr id="separationJeux">
     <!-- code à revoir surtout au niveau de lg. - -->
     <div class="row">
         <div class=" col-12 col-sm-6 col-md-6  col-lg-4 col-xl-4 ">
-            <img src="img/witcher1.jpg"/>
+            <img src="img/witcher1.jpg" id="witcher1"/>
         </div>
         <div class=" col-12 col-sm-6 col-md-6 col-lg-4  col-xl-4 ">
-            <img src="img/witcher2.jpg"/>
+            <img src="img/witcher2.jpg" id="witcher2"/>
         </div>
         <div class=" col-12 col-sm-4 offset-sm-4 col-md-4 offset-md-4 col-lg-4 offset-lg-0 col-xl-4 offset-xl-0 ">
-            <img src="img/witcher3.jpg"/>
+            <img src="img/witcher3.jpg" id="witcher3"/>
         </div>
     </div>
 </div>
