--- a/Examen2/index.html
+++ b/Examen2/index.html
@@ -42,10 +42,11 @@
 <div class="container-fluid " id="banniere" >
     <div class="row">
         <div class= "col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 ">
-                <h1 class="centrerTitre">
+                <h1 class="centrerTitre " align="justify">
                     The Witcher 3
                 </h1>
-                <h2 class="centrerTitre">
+            <br>
+                <h2 class="centrerTitre " align="justify">
                     The Wild Hunt
                 </h2>
         </div>
@@ -88,28 +89,28 @@
 <div class="container ">
     <div class="row">
         <div class="col-12 col-sm-6 col-md-6 col-lg-3 col-xl-3">
-            <img src="img/witcherLivre1.jpg"/>
+            <img src="img/witcherLivre1.jpg" id="witcherLivre1"/>
         </div>
-        <div class="col-12 col-sm-6 col-md-6 col-lg-3 col-xl-3">
-            <img src="img/witcherLivre2.jpg"/>
+        <div class="col-12 col-sm-6 col-md-6 col-lg-3 col-xl-3 ">
+            <img src="img/witcherLivre2.jpg" id="witcherLivre2"/>
         </div>
-        <div class="col-12 col-sm-6 col-md-6 col-lg-3 col-xl-3">
-            <img src="img/witcherLivre3.jpg"/>
+        <div class="col-12 col-sm-6 col-md-6 col-lg-3 col-xl-3 ">
+            <img src="img/witcherLivre3.jpg" id="witcherLivre3"/>
         </div>
-        <div class="col-12 col-sm-6 col-md-6 col-lg-3 col-xl-3">
-            <img src="img/witcherLivre4.jpg"/>
+        <div class="col-12 col-sm-6 col-md-6 col-lg-3 col-xl-3 ">
+            <img src="img/witcherLivre4.jpg" id="witcherLivre4"/>
         </div>
-        <div class="col-12 col-sm-6 col-md-6 col-lg-3 col-xl-3">
-            <img src="img/witcherLivre5.jpg"/>
+        <div class="col-12 col-sm-6 col-md-6 col-lg-3 col-xl-3 ">
+            <img src="img/witcherLivre5.jpg" id="witcherLivre5"/>
         </div>
-        <div class="col-12 col-sm-6 col-md-6 col-lg-3 col-xl-3">
-            <img src="img/witcherLivre6.jpg"/>
+        <div class="col-12 col-sm-6 col-md-6 col-lg-3 col-xl-3 ">
+            <img src="img/witcherLivre6.jpg" id="witcherLivre6"/>
         </div>
-        <div class="col-12 col-sm-6 col-md-6 col-lg-3 col-xl-3">
-            <img src="img/witcherLivre7.jpg"/>
+        <div class="col-12 col-sm-6 col-md-6 col-lg-3 col-xl-3 ">
+            <img src="img/witcherLivre7.jpg" id="witcherLivre7"/>
         </div>
-        <div class="col-12 col-sm-6 col-md-6 col-lg-3 col-xl-3">
-            <img src="img/witcherLivre8.jpg"/>
+        <div class="col-12 col-sm-6 col-md-6 col-lg-3 col-xl-3 ">
+            <img src="img/witcherLivre8.jpg" id="witcherLivre8"/>
         </div>
     </div>
 </div>
