--- a/Examen2/index.html
+++ b/Examen2/index.html
@@ -72,7 +72,7 @@
             <img src="img/witcher2.jpg" id="witcher2"/>
         </div>
         <div class=" col-12 col-sm-4 offset-sm-4 col-md-4 offset-md-4 col-lg-4 offset-lg-0 col-xl-4 offset-xl-0 ">
-            <img src="img/witcher3.jpg" id="witcher3"/>
+            <img src="img/witcher3.jpg" id="witcher3" />
         </div>
     </div>
 </div>
@@ -80,9 +80,11 @@
 <!-- Revérifié si les livres sont bien placés- -->
 <div class="container text-center">
     <div class="row">
-        <h3>
-            Livres
-        </h3>
+        <div class="col-12 col-sm-4 offset-sm-4 col-md-4 offset-md-4 col-lg-4 offset-lg-0 col-xl-4 offset-xl-0">
+            <h3>
+                Livres
+            </h3>
+        </div>
 
     </div>
     <hr>
