--- a/Examen2/index.html
+++ b/Examen2/index.html
@@ -41,7 +41,7 @@
 <!-- Ici commence le deuxiènme container - Bannière du site- -->
 <div class="container-fluid " id="banniere" >
     <div class="row">
-        <div class= "col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 ">
+        <div class= "col-12 col-sm-12 col-md-12 col-lg-10 col-xl-10 ">
                 <h1 class="centrerTitre " align="justify">
                     The Witcher 3
                 </h1>
@@ -56,8 +56,9 @@
 <!-- Ici commence le troisième container - présentation des jeux- -->
 <div class="container">
     <div class="row">
-        <div class=" col-12 col-sm-3 offset-sm-5 col-md-3 offset-md-5 col-lg-3 offset-lg-0 col-xl-3 offset-xl-0 ">
-            <h3>
+        <div class=" col-12 col-sm-3 offset-sm-5 col-md-3 offset-md-5 col-lg-4 offset-lg-0 col-xl-4 offset-xl-0 pt-4 ml-6">
+       <!-- <div class=" col-12 col-sm-3 offset-sm-5 col-md-3 offset-md-5 col-lg-3 offset-lg-0 col-xl-3 offset-xl-0 ">-->
+            <h3 id="fontColorjeux">
                 Jeux
             </h3>
         </div>
@@ -80,15 +81,15 @@
 <!-- Revérifié si les livres sont bien placés- -->
 <div class="container text-center">
     <div class="row">
-        <div class="col-12 col-sm-4 offset-sm-4 col-md-4 offset-md-4 col-lg-4 offset-lg-0 col-xl-4 offset-xl-0">
-            <h3>
+        <div class="col-12 col-sm-4 offset-sm-4 col-md-4 offset-md-4 col-lg-4 offset-lg-0 col-xl-4 offset-xl-0 pt-4">
+            <h3 id="fontColorLivres">
                 Livres
             </h3>
         </div>
 
     </div>
     <hr>
-<div class="container ">
+<div class="container">
     <div class="row">
         <div class="col-12 col-sm-6 col-md-6 col-lg-3 col-xl-3">
             <img src="img/witcherLivre1.jpg" id="witcherLivre1"/>
