--- a/Examen2/index.html
+++ b/Examen2/index.html
@@ -56,7 +56,7 @@
 <!-- Ici commence le troisième container - présentation des jeux- -->
 <div class="container">
     <div class="row">
-        <div class=" col-12 col-sm-3 offset-sm-5 col-md-3 offset-md-5 col-lg-4 offset-lg-0 col-xl-4 offset-xl-0 pt-4 ml-6">
+        <div class=" col-12 col-sm-3 offset-sm-5 col-md-3 offset-md-5 col-lg-4 offset-lg-0 col-xl-4 offset-xl-0 pt-4 ">
        <!-- <div class=" col-12 col-sm-3 offset-sm-5 col-md-3 offset-md-5 col-lg-3 offset-lg-0 col-xl-3 offset-xl-0 ">-->
             <h3 id="fontColorjeux">
                 Jeux
