--- a/Examen2/index.html
+++ b/Examen2/index.html
@@ -56,8 +56,8 @@
 <!-- Ici commence le troisième container - présentation des jeux- -->
 <div class="container">
     <div class="row">
-        <div class=" col-12 col-sm-3 offset-sm-5 col-md-3 offset-md-5 col-lg-4 offset-lg-0 col-xl-4 offset-xl-0 pt-4 ">
-       <!-- <div class=" col-12 col-sm-3 offset-sm-5 col-md-3 offset-md-5 col-lg-3 offset-lg-0 col-xl-3 offset-xl-0 ">-->
+
+     <div class=" col-12 col-sm-3 offset-sm-5 col-md-3 offset-md-5 col-lg-3 offset-lg-0 col-xl-3 offset-xl-0 pt-4 ">
             <h3 id="fontColorjeux">
                 Jeux
             </h3>
@@ -72,8 +72,8 @@
         <div class=" col-12 col-sm-6 col-md-6 col-lg-4  col-xl-4 ">
             <img src="img/witcher2.jpg" id="witcher2"/>
         </div>
-        <div class=" col-12 col-sm-4 offset-sm-4 col-md-4 offset-md-4 col-lg-4 offset-lg-0 col-xl-4 offset-xl-0 ">
-            <img src="img/witcher3.jpg" id="witcher3" />
+        <div class=" col-12 col-sm-6 offset-sm-3 col-md-6 offset-md-3 col-lg-4 offset-lg-0 col-xl-4 offset-xl-0 ">
+            <img class="img-fluid" src="img/witcher3.jpg" id="witcher3" />
         </div>
     </div>
 </div>
