--- a/Examen2/index.html
+++ b/Examen2/index.html
@@ -33,7 +33,7 @@
         <div class=" col-12 offset-0 col-sm-2 offset-sm-7 col-md-2 offset-md-7 col-lg-2 offset-lg-0 col-xl-2 offset-xl-0  pt-3" id="Communauté">
             Communauté
         </div>
-        <div class=" col-12 col-md-2 col-lg-2 col-xl-2 pt-3" id="Boutique">
+        <div class=" col-12 col-sm-2 col-md-2 col-lg-2 col-xl-2 pt-3" id="Boutique">
             Boutique
         </div>
     </div>
