--- a/Examen2/index.html
+++ b/Examen2/index.html
@@ -57,8 +57,8 @@
 <div class="container">
     <div class="row">
 
-     <div class=" col-12 col-sm-3 offset-sm-5 col-md-3 offset-md-5 col-lg-3 offset-lg-0 col-xl-3 offset-xl-0 pt-4 ">
-            <h3 id="fontColorjeux">
+     <div class="col-12 col-sm-3 offset-sm-5 col-md-4 offset-md-3 col-lg-5 offset-lg-0 col-xl-3 offset-xl-0 pt-4  fondRouge " >
+            <h3 id="fontColorjeux pl-9"  >
                 Jeux
             </h3>
         </div>
