--- a/Examen2/index.html
+++ b/Examen2/index.html
@@ -57,8 +57,8 @@
 <div class="container">
     <div class="row">
 
-     <div class="col-12 col-sm-3 offset-sm-5 col-md-4 offset-md-3 col-lg-5 offset-lg-0 col-xl-3 offset-xl-0 pt-4  fondRouge " >
-            <h3 id="fontColorjeux pl-9"  >
+     <div class="col-12 col-sm-3 offset-sm-5 col-md-4 offset-md-3 col-lg-5 offset-lg-0 col-xl-3 offset-xl-0 pt-4  " >
+            <h3 id="JeuxColorSize" >
                 Jeux
             </h3>
         </div>
@@ -67,7 +67,7 @@
     <!-- code à revoir surtout au niveau de lg. - -->
     <div class="row">
         <div class=" col-12 col-sm-6 col-md-6  col-lg-4 col-xl-4 ">
-            <img src="img/witcher1.jpg" id="witcher1"/>
+            <img  src="img/witcher1.jpg" id="witcher1"/>
         </div>
         <div class=" col-12 col-sm-6 col-md-6 col-lg-4  col-xl-4 ">
             <img src="img/witcher2.jpg" id="witcher2" />
@@ -92,28 +92,28 @@
 <div class="container">
     <div class="row">
         <div class="col-12 col-sm-6 col-md-6 col-lg-3 col-xl-3">
-            <img src="img/witcherLivre1.jpg" id="witcherLivre1"/>
+            <img class="img-fluid" src="img/witcherLivre1.jpg" id="witcherLivre1"/>
         </div>
         <div class="col-12 col-sm-6 col-md-6 col-lg-3 col-xl-3 ">
-            <img src="img/witcherLivre2.jpg" id="witcherLivre2"/>
+            <img class="img-fluid" src="img/witcherLivre2.jpg" id="witcherLivre2"/>
         </div>
         <div class="col-12 col-sm-6 col-md-6 col-lg-3 col-xl-3 ">
-            <img src="img/witcherLivre3.jpg" id="witcherLivre3"/>
+            <img class="img-fluid" src="img/witcherLivre3.jpg" id="witcherLivre3"/>
         </div>
         <div class="col-12 col-sm-6 col-md-6 col-lg-3 col-xl-3 ">
-            <img src="img/witcherLivre4.jpg" id="witcherLivre4"/>
+            <img class="img-fluid"src="img/witcherLivre4.jpg" id="witcherLivre4"/>
         </div>
         <div class="col-12 col-sm-6 col-md-6 col-lg-3 col-xl-3 ">
-            <img src="img/witcherLivre5.jpg" id="witcherLivre5"/>
+            <img class="img-fluid" src="img/witcherLivre5.jpg" id="witcherLivre5"/>
         </div>
         <div class="col-12 col-sm-6 col-md-6 col-lg-3 col-xl-3 ">
-            <img src="img/witcherLivre6.jpg" id="witcherLivre6"/>
+            <img class="img-fluid" src="img/witcherLivre6.jpg" id="witcherLivre6"/>
         </div>
         <div class="col-12 col-sm-6 col-md-6 col-lg-3 col-xl-3 ">
-            <img src="img/witcherLivre7.jpg" id="witcherLivre7"/>
+            <img class="img-fluid" src="img/witcherLivre7.jpg" id="witcherLivre7"/>
         </div>
         <div class="col-12 col-sm-6 col-md-6 col-lg-3 col-xl-3 ">
-            <img src="img/witcherLivre8.jpg" id="witcherLivre8"/>
+            <img class="img-fluid" src="img/witcherLivre8.jpg" id="witcherLivre8"/>
         </div>
     </div>
 </div>
