--- a/Examen2/index.html
+++ b/Examen2/index.html
@@ -119,14 +119,21 @@
 </div>
 <!-- Ici commence le cinquième container - pied de page - -->
 
+
 <div class="container-fluid text-center">
     <div class="row">
+
+        <!-- J'ai adopté la mise en forme des beaux ScreenShot complets que tu nous
+         a recommandés. Considérant le pied de page du Large et plus ( > 992 px de large) le «NOUS JOINDRE»: le «NOUS» est au dessus de «JOINDRE»
+        dans la colonne de deux cases entourrées de deux vides comme l'indique le ScreenShot contenu dans le dossier d'examen.
+          les autres maquette ont également ont été respectés- -->
+
         <div class="col-12 col-sm-12  col-md-12  col-lg-2 offset-lg-5 col-xl-2 offset-xl-5 " id="NousJoindre">
             NOUS JOINDRE
         </div>
     </div>
         <hr>
-    <div class="row no-gutters">
+    <div class="row ">
         <div class="col-4 col-sm-4 col-md-4 col-lg-4 col-xl-4">
             <img src="img/piedPage.png"id="piedPage"/>
         </div>
