--- a/Examen2/index.html
+++ b/Examen2/index.html
@@ -6,14 +6,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
     <title>Examen 2</title>
     <link rel="stylesheet" href="bootstrap-4.0.0-dist/css/bootstrap.css">
     <link rel="stylesheet" href="css/style.css">
     <!-- VOTRE CSS ICI APRES -->
 </head>
 <body>
-<!-- Ici commence le premier container -entête du site- -->
+<!-- Ici commence le premier container -entête du site-menu -->
 <!-- se rappeler pour introduire le col.md - -->
 <div class="container-fluid text-center">
     <div class="row">
@@ -42,11 +41,11 @@
 <div class="container-fluid " id="banniere" >
     <div class="row">
         <div class= "col-12 col-sm-12 col-md-12 col-lg-10 col-xl-10 ">
-                <h1 class="centrerTitre " align="justify">
+                <h1 class="centrerTitre">
                     The Witcher 3
                 </h1>
             <br>
-                <h2 class="centrerTitre " align="justify">
+                <h2 class="centrerTitre" >
                     The Wild Hunt
                 </h2>
         </div>
