--- a/Examen2/index.html
+++ b/Examen2/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!-- index.html -->
 <!-- Par Komlan Albert Gblokpor-Koffi -->
-<!-- Le 06-06-2020 -->
+<!-- Le 08-06-2020 -->
 <html lang="fr-ca">
 <head>
     <meta charset="UTF-8">
@@ -41,26 +41,20 @@
 <div class="container-fluid " id="banniere" >
     <div class="row">
         <div class= "col-12 col-sm-12 col-md-12 col-lg-10 col-xl-10 ">
-                <h1 class="centrerTitre">
-                    The Witcher 3
-                </h1>
+                <h1 class="centrerTitre">The Witcher 3</h1>
             <br>
-                <h2 class="centrerTitre" >
-                    The Wild Hunt
-                </h2>
+                <h2 class="centrerTitre" >The Wild Hunt</h2>
         </div>
     </div>
 </div>
 
 <!-- Ici commence le troisième container - présentation des jeux- -->
-<div class="container">
+<div class="container text-center">
     <div class="row">
-
-     <div class="col-12 col-sm-4 offset-sm-3 col-md-4 offset-md-3 col-lg-5 offset-lg-0 col-xl-3 offset-xl-0 pt-4  " >
-            <h3 id="JeuxColorSize" >
-                Jeux
-            </h3>
+        <div class="col-12 col-sm-4 offset-sm-4 col-md-4 offset-md-4 col-lg-4 offset-lg-0 col-xl-4 offset-xl-0 pt-4">
+            <h3 id="JeuxColorSize">Jeux</h3>
         </div>
+
     </div>
     <hr id="separationJeux">
     <!-- code à revoir surtout au niveau de lg. - -->
@@ -81,9 +75,7 @@
 <div class="container text-center">
     <div class="row">
         <div class="col-12 col-sm-4 offset-sm-4 col-md-4 offset-md-4 col-lg-4 offset-lg-0 col-xl-4 offset-xl-0 pt-4">
-            <h3 id="fontColorLivres">
-                Livres
-            </h3>
+            <h3 id="fontColorLivres">Livres</h3>
         </div>
 
     </div>
@@ -116,9 +108,8 @@
         </div>
     </div>
 </div>
+
 <!-- Ici commence le cinquième container - pied de page - -->
-
-
 <div class="container-fluid text-center">
     <div class="row">
 
@@ -127,9 +118,7 @@
         dans la colonne de deux cases entourrées de deux vides comme l'indique le ScreenShot contenu dans le dossier d'examen.
           les autres maquette ont également ont été respectés- -->
 
-        <div class="col-12 col-sm-12  col-md-12  col-lg-2 offset-lg-5 col-xl-2 offset-xl-5 " id="NousJoindre">
-            NOUS JOINDRE
-        </div>
+        <div class="col-12 col-sm-12  col-md-12  col-lg-2 offset-lg-5 col-xl-2 offset-xl-5 " id="NousJoindre">NOUS JOINDRE</div>
     </div>
         <hr>
     <div class="row ">
