--- a/Examen2/index.html
+++ b/Examen2/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!-- index.html -->
 <!-- Par Komlan Albert Gblokpor-Koffi -->
-<!-- Le 08-06-2020 -->
+<!-- Dernière modification 08-06-2020 -->
 <html lang="fr-ca">
 <head>
     <meta charset="UTF-8">
@@ -12,13 +12,13 @@
     <!-- VOTRE CSS ICI APRES -->
 </head>
 <body>
+
 <!-- Ici commence le premier container -entête du site-menu -->
-<!-- se rappeler pour introduire le col.md - -->
 <div class="container-fluid text-center">
     <div class="row">
         <!-- Ajout d'un padding top de 3 au colonnes du menu sans utiliser directement  du css- -->
         <div class=" col-12  col-sm-6 col-md-6 col-lg-2 col-xl-2 pt-3" >
-            <img src="img/logo.png" id="logo"/>
+            <img src="img/logo.png" alt="LeLogoWitcher"  id="logo"/>
         </div>
         <div class=" col-12  col-sm-2 col-md-2 col-lg-2 col-xl-2 pt-3" id="jeux">
            Jeux
@@ -38,12 +38,12 @@
     </div>
 </div>
 <!-- Ici commence le deuxiènme container - Bannière du site- -->
-<div class="container-fluid " id="banniere" >
+<div class="container-fluid text-center" id="banniere" >
     <div class="row">
         <div class= "col-12 col-sm-12 col-md-12 col-lg-10 col-xl-10 ">
-                <h1 class="centrerTitre">The Witcher 3</h1>
+            <h1 class="centrerTitre">The Witcher 3</h1>
             <br>
-                <h2 class="centrerTitre" >The Wild Hunt</h2>
+            <h2 class="centrerTitre" >The Wild Hunt</h2>
         </div>
     </div>
 </div>
@@ -54,19 +54,18 @@
         <div class="col-12 col-sm-4 offset-sm-4 col-md-4 offset-md-4 col-lg-4 offset-lg-0 col-xl-4 offset-xl-0 pt-4">
             <h3 id="JeuxColorSize">Jeux</h3>
         </div>
-
     </div>
     <hr id="separationJeux">
     <!-- code à revoir surtout au niveau de lg. - -->
     <div class="row">
         <div class=" col-12 col-sm-6 col-md-6  col-lg-4 col-xl-4 ">
-            <img  src="img/witcher1.jpg" id="witcher1"/>
+            <img  src="img/witcher1.jpg" alt="TheWildHunt" id="witcher1"/>
         </div>
         <div class=" col-12 col-sm-6 col-md-6 col-lg-4  col-xl-4 ">
-            <img src="img/witcher2.jpg" id="witcher2" />
+            <img src="img/witcher2.jpg" alt="TheWildHunt1" id="witcher2"/>
         </div>
         <div class=" col-12 col-sm-6 offset-sm-3 col-md-6 offset-md-3 col-lg-4 offset-lg-0 col-xl-4 offset-xl-0 ">
-            <img  src="img/witcher3.jpg"  id="witcher3" />
+            <img  src="img/witcher3.jpg"  alt="TheWildHunt2" id="witcher3"/>
         </div>
     </div>
 </div>
@@ -77,53 +76,50 @@
         <div class="col-12 col-sm-4 offset-sm-4 col-md-4 offset-md-4 col-lg-4 offset-lg-0 col-xl-4 offset-xl-0 pt-4">
             <h3 id="fontColorLivres">Livres</h3>
         </div>
-
     </div>
     <hr>
 <div class="container">
     <div class="row">
         <div class="col-12 col-sm-6 col-md-6 col-lg-3 col-xl-3">
-            <img class="img-fluid" src="img/witcherLivre1.jpg" id="witcherLivre1"/>
+            <img  src="img/witcherLivre1.jpg" alt="Livre1" id="witcherLivre1"/>
         </div>
         <div class="col-12 col-sm-6 col-md-6 col-lg-3 col-xl-3 ">
-            <img class="img-fluid" src="img/witcherLivre2.jpg" id="witcherLivre2"/>
+            <img  src="img/witcherLivre2.jpg" alt="Livre2" id="witcherLivre2"/>
         </div>
         <div class="col-12 col-sm-6 col-md-6 col-lg-3 col-xl-3 ">
-            <img class="img-fluid" src="img/witcherLivre3.jpg" id="witcherLivre3"/>
+            <img  src="img/witcherLivre3.jpg" alt="Livre3" id="witcherLivre3"/>
         </div>
         <div class="col-12 col-sm-6 col-md-6 col-lg-3 col-xl-3 ">
-            <img class="img-fluid"src="img/witcherLivre4.jpg" id="witcherLivre4"/>
+            <img src="img/witcherLivre4.jpg" alt="Livre4" id="witcherLivre4"/>
         </div>
         <div class="col-12 col-sm-6 col-md-6 col-lg-3 col-xl-3 ">
-            <img class="img-fluid" src="img/witcherLivre5.jpg" id="witcherLivre5"/>
+            <img src="img/witcherLivre5.jpg" alt="Livre5" id="witcherLivre5"/>
         </div>
         <div class="col-12 col-sm-6 col-md-6 col-lg-3 col-xl-3 ">
-            <img class="img-fluid" src="img/witcherLivre6.jpg" id="witcherLivre6"/>
+            <img  src="img/witcherLivre6.jpg" alt="Livre6" id="witcherLivre6"/>
         </div>
         <div class="col-12 col-sm-6 col-md-6 col-lg-3 col-xl-3 ">
-            <img class="img-fluid" src="img/witcherLivre7.jpg" id="witcherLivre7"/>
+            <img  src="img/witcherLivre7.jpg" alt="Livre7" id="witcherLivre7"/>
         </div>
         <div class="col-12 col-sm-6 col-md-6 col-lg-3 col-xl-3 ">
-            <img class="img-fluid" src="img/witcherLivre8.jpg" id="witcherLivre8"/>
+            <img src="img/witcherLivre8.jpg" alt="Livre8" id="witcherLivre8"/>
         </div>
     </div>
 </div>
 
 <!-- Ici commence le cinquième container - pied de page - -->
-<div class="container-fluid text-center">
-    <div class="row">
-
-        <!-- J'ai adopté la mise en forme des beaux ScreenShot complets que tu nous
-         a recommandés. Considérant le pied de page du Large et plus ( > 992 px de large) le «NOUS JOINDRE»: le «NOUS» est au dessus de «JOINDRE»
+    <!-- J'ai adopté la mise en forme des beaux ScreenShot complets que tu nous
+         a recommandés dans l'épreuve de l'examen2. Considérant le pied de page du Large et plus ( > 992 px de large) le «NOUS JOINDRE»: le «NOUS» est au dessus de «JOINDRE»
         dans la colonne de deux cases entourrées de deux vides comme l'indique le ScreenShot contenu dans le dossier d'examen.
           les autres maquette ont également ont été respectés- -->
-
+<div class="container-fluid text-center">
+    <div class="row">
         <div class="col-12 col-sm-12  col-md-12  col-lg-2 offset-lg-5 col-xl-2 offset-xl-5 " id="NousJoindre">NOUS JOINDRE</div>
     </div>
         <hr>
     <div class="row ">
         <div class="col-4 col-sm-4 col-md-4 col-lg-4 col-xl-4">
-            <img src="img/piedPage.png"id="piedPage"/>
+            <img src="img/piedPage.png" alt="Pelican" id="piedPage"/>
         </div>
         <div class="col-1 col-sm-1 col-md-1 col-lg-1 col-xl-1 ">
             <i class="fab fa-twitter-square" id="Tweeter"></i>
@@ -145,5 +141,4 @@
 <script src="bootstrap-4.0.0-dist/js/bootstrap.js"></script>
 
 </body>
-
 </html>
