--- a/Examen2/index.html
+++ b/Examen2/index.html
@@ -43,7 +43,7 @@
         <div class= "col-12 col-sm-12 col-md-12 col-lg-10 col-xl-10 ">
             <h1 class="centrerTitre">The Witcher 3</h1>
             <br>
-            <h2 class="centrerTitre" >The Wild Hunt</h2>
+            <h2 class="centrerTitre">The Wild Hunt</h2>
         </div>
     </div>
 </div>
@@ -55,8 +55,9 @@
             <h3 id="JeuxColorSize">Jeux</h3>
         </div>
     </div>
-    <hr id="separationJeux">
-    <!-- code à revoir surtout au niveau de lg. - -->
+    <hr>
+</div>
+<div class="container">
     <div class="row">
         <div class=" col-12 col-sm-6 col-md-6  col-lg-4 col-xl-4 ">
             <img  src="img/witcher1.jpg" alt="TheWildHunt" id="witcher1"/>
@@ -78,6 +79,8 @@
         </div>
     </div>
     <hr>
+</div>
+
 <div class="container">
     <div class="row">
         <div class="col-12 col-sm-6 col-md-6 col-lg-3 col-xl-3">
@@ -113,11 +116,13 @@
         dans la colonne de deux cases entourrées de deux vides comme l'indique le ScreenShot contenu dans le dossier d'examen.
           les autres maquette ont également ont été respectés- -->
 <div class="container-fluid text-center">
+
     <div class="row">
         <div class="col-12 col-sm-12  col-md-12  col-lg-2 offset-lg-5 col-xl-2 offset-xl-5 " id="NousJoindre">NOUS JOINDRE</div>
     </div>
         <hr>
-    <div class="row ">
+    </div>
+    <div class="row">
         <div class="col-4 col-sm-4 col-md-4 col-lg-4 col-xl-4">
             <img src="img/piedPage.png" alt="Pelican" id="piedPage"/>
         </div>
