--- a/Examen2/index.html
+++ b/Examen2/index.html
@@ -85,28 +85,28 @@
 <div class="container">
     <div class="row">
         <div class="col-12 col-sm-6 col-md-6 col-lg-3 col-xl-3">
-            <img  src="img/witcherLivre1.jpg" alt="Livre1" id="witcherLivre1"/>
+            <img  src="img/witcherLivre1.jpg" alt="Livre1" />
         </div>
         <div class="col-12 col-sm-6 col-md-6 col-lg-3 col-xl-3 ">
-            <img  src="img/witcherLivre2.jpg" alt="Livre2" id="witcherLivre2"/>
+            <img  src="img/witcherLivre2.jpg" alt="Livre2" />
         </div>
         <div class="col-12 col-sm-6 col-md-6 col-lg-3 col-xl-3 ">
-            <img  src="img/witcherLivre3.jpg" alt="Livre3" id="witcherLivre3"/>
+            <img  src="img/witcherLivre3.jpg" alt="Livre3" />
         </div>
         <div class="col-12 col-sm-6 col-md-6 col-lg-3 col-xl-3 ">
-            <img src="img/witcherLivre4.jpg" alt="Livre4" id="witcherLivre4"/>
+            <img src="img/witcherLivre4.jpg" alt="Livre4" />
         </div>
         <div class="col-12 col-sm-6 col-md-6 col-lg-3 col-xl-3 ">
-            <img src="img/witcherLivre5.jpg" alt="Livre5" id="witcherLivre5"/>
+            <img src="img/witcherLivre5.jpg" alt="Livre5" />
         </div>
         <div class="col-12 col-sm-6 col-md-6 col-lg-3 col-xl-3 ">
-            <img  src="img/witcherLivre6.jpg" alt="Livre6" id="witcherLivre6"/>
+            <img  src="img/witcherLivre6.jpg" alt="Livre6" />
         </div>
         <div class="col-12 col-sm-6 col-md-6 col-lg-3 col-xl-3 ">
-            <img  src="img/witcherLivre7.jpg" alt="Livre7" id="witcherLivre7"/>
+            <img  src="img/witcherLivre7.jpg" alt="Livre7" />
         </div>
         <div class="col-12 col-sm-6 col-md-6 col-lg-3 col-xl-3 ">
-            <img src="img/witcherLivre8.jpg" alt="Livre8" id="witcherLivre8"/>
+            <img src="img/witcherLivre8.jpg" alt="Livre8" />
         </div>
     </div>
 </div>
