--- a/JeMePresente/index.html
+++ b/JeMePresente/index.html
@@ -1,16 +1,43 @@
 <!DOCTYPE html>
-<!--index.html-->
-<!--Par Komlan Albert Gblokpor-Koffi-->
-<!--Le 8-04-2020-->
-
-<html lang="fr-ca" >
+<html>
 <head>
-<link rel="stylesheet" href="css/style.css">
-<meta charset="UTF-8">
-    <title>Présentation </title>
-
+    <title>Démo Bootstrap 2</title>
+    <!-- LA LIGNE LA PLUS IMPORTANTE AU MONDE -->
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta charset="UTF-8">
+    <!-- ORDRE EST IMPORTANT BOOTSTRAP AVANT NOTRE CSS -->
+    <link rel="stylesheet" type="text/css" href="CSS/bootstrap.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="CSS/style.css">
 </head>
 <body>
+<body>
+
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="#">Navbar</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+            aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <i class="fab fa-amazon fa-6x"></i>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav mr-auto">
+            <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current) </span></a>
+            <a class="nav-item nav-link" href="#">Features </a>
+            <a class="nav-item nav-link" href="#">Pricing</a>
+            <a class="nav-item nav-link disabled" href="#">Disabled </a>
+        </div>
+    </div>
+</nav>
+
+
+
+
+
+
+
+
+
+
 <p>Bonjour, je me présente</p>
 <br/>
 
@@ -29,5 +56,8 @@
     <img src="Medias/Yoga-Neige.jpg"/>
     <li><h1><a href="reve.html">Mon rêve </a></h1></li>
     <img src="Medias/Komlan4.JPG"/></ol>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script src="js/bootstrap.js"></script>
 </body>
 </html>
