--- a/ExerciceMenus/index.html
+++ b/ExerciceMenus/index.html
@@ -10,10 +10,11 @@ Dernière modification : 03-06-2020
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" href="bootstrap-4.0.0-dist/css/bootstrap.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="img/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 <body>
+
 <nav class="navbar navbar-light bg-light navbar-expand-lg">
     <a class="navbar-brand" href="#">Logo</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -45,6 +46,45 @@ Dernière modification : 03-06-2020
         </ul>
     </div>
 </nav>
+<header>
+    <div class="overlay"></div>
+    <div class="homepage-hero-module">
+        <div class="video-container">
+            <div class="filter"></div>
+            <video autoplay loop muted playsinline src="PATH_TO_MP4" class="fillWidth"></video>
+            <div class="poster hidden">
+                <img src="PATH_TO_JPEG" alt="">
+            </div>
+        </div>
+    </div>
+</header>
+
+<header>
+    <div class="overlay"></div>
+    <video playsinline ="playsinline" autoplay="autoplay" muted="muted" loop="loop">
+        <source src="../img/Agua-natural.mp4"
+                type="video/mp4" >
+    </video>
+    <div class="container h-100" >
+        <div class="row h-100 text-center align-items-center" >
+            <div class="col-12 text-white" >
+                <h1 class="display-3" >Video Header</h1>
+                <p class="lead mb-0" >With HTML5 Video and Bootstrap 4</p>
+            </div>
+        </div>
+    </div>
+</header>
+
+    </video>
+    <div class="container h-100" >
+        <div class="row h-100 text-center align-items-center" >
+            <div class="col-12 text-white" >
+                <h1 class="display-3" >Video Header</ h1>
+                <p class="lead mb-0" >With HTML5 Video and Bootstrap 4</ p>
+            </div>
+        </div>
+    </div>
+</header>
 
 <div class="container-fluid text-center" id="banniere">
     <div class="row">
