--- a/ExerciceMenus/index.html
+++ b/ExerciceMenus/index.html
@@ -46,51 +46,12 @@ Dernière modification : 03-06-2020
         </ul>
     </div>
 </nav>
-<header>
-    <div class="overlay"></div>
-    <div class="homepage-hero-module">
-        <div class="video-container">
-            <div class="filter"></div>
-            <video autoplay loop muted playsinline src="PATH_TO_MP4" class="fillWidth"></video>
-            <div class="poster hidden">
-                <img src="PATH_TO_JPEG" alt="">
-            </div>
-        </div>
-    </div>
-</header>
-
-<header>
-    <div class="overlay"></div>
-    <video playsinline ="playsinline" autoplay="autoplay" muted="muted" loop="loop">
-        <source src="../img/Agua-natural.mp4"
-                type="video/mp4" >
-    </video>
-    <div class="container h-100" >
-        <div class="row h-100 text-center align-items-center" >
-            <div class="col-12 text-white" >
-                <h1 class="display-3" >Video Header</h1>
-                <p class="lead mb-0" >With HTML5 Video and Bootstrap 4</p>
-            </div>
-        </div>
-    </div>
-</header>
-
-    </video>
-    <div class="container h-100" >
-        <div class="row h-100 text-center align-items-center" >
-            <div class="col-12 text-white" >
-                <h1 class="display-3" >Video Header</ h1>
-                <p class="lead mb-0" >With HTML5 Video and Bootstrap 4</ p>
-            </div>
-        </div>
-    </div>
-</header>
 
 <div class="container-fluid text-center" id="banniere">
     <div class="row">
         <div class="col-xl-12">
             <!-- Le titre de la banniere-->
-            <!-- <h1> Bienvenue dans le diocèse de Kpalimé !</h1>-->
+         <h1> Bienvenue dans le diocèse de Kpalimé !</h1>
             <hr>
             <!-- <p>Nous sommes le peuple que sa main conduit. Marchons à la suite du Christ.Le Diocèse de Kpalimé est l'un des 7 diocèses du Togo (Afrique de l'Ouest) . Il couvre une superficie de 6444 km². Le 1er juillet 1994, Kpalimé fut érigé en Diocèse par le pape Saint Jean-Paul II. Le 1er évêque fut Mgr Pierre Koffi SÉSHIE (1994-2000). L’actuel Pasteur du Diocèse est Mgr Benoît Comlan Messan ALOWONOU</p>-->
             <!-- <button type="button" class="buttonTrouveSurInternet">Get started !</button>-->
