--- a/DioceseKpalime/diocese.html
+++ b/DioceseKpalime/diocese.html
@@ -10,7 +10,7 @@ Dernière modification : 03-06-2020
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" href="bootstrap-4.0.0-dist/css/bootstrap.css">
-    <link rel="stylesheet" href="img/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 <body>
