--- a/DioceseKpalime/index.html
+++ b/DioceseKpalime/index.html
@@ -10,13 +10,13 @@ Dernière modification : 03-06-2020
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" href="bootstrap-4.0.0-dist/css/bootstrap.css">
-    <link rel="stylesheet" href="img/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 <body>
 
 <nav class="navbar navbar-light bg-light navbar-expand-lg">
-    <a class="navbar-brand" href="#">Logo</a>
+    <a class="navbar-brand" href="index.html"><img src="img/logo.png"/></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -65,7 +65,7 @@ Dernière modification : 03-06-2020
             <h2> Jubilaté Deo!</h2> <br/>  <h2> Jubilaté Omnis terra !</h2>
             <hr id="separation2">
             <p class="buttonTrouveSurInternet">Nous sommes le peuple que sa main conduit. Marchons à la suite du Christ.Le Diocèse de Kpalimé est l'un des 7 diocèses du Togo (Afrique de l'Ouest) . Il couvre une superficie de 6444 km². Le 1er juillet 1994, Kpalimé fut érigé en Diocèse par le pape Saint Jean-Paul II. Le 1er évêque fut Mgr Pierre Koffi SÉSHIE (1994-2000). L’actuel Pasteur du Diocèse est Mgr Benoît Comlan Messan ALOWONOU</p>
-            <button type="button" class="buttonTrouveSurInternet">Get started !</button>
+            <button type="button" class="buttonTrouveSurInternet">Lire la suite !</button>
         </div>
     </div>
 </div>
@@ -101,9 +101,20 @@ Dernière modification : 03-06-2020
     </div>
 </div>
 
+<div class="container-fluid text-center" id="partie4">
+    <div class="row">
+        <div class="col-12 col-xl-6 offset-xl-3">
+            <h2> Partie 2 de l'exercice !</h2>
+            <hr id="separation3">
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but.</p>
+            <button type="button" class="buttonTrouveSurInternet">Get started !</button>
+        </div>
+    </div>
+</div>
 
 
-<!-- Ce sont les colonnes de plusieurs images
+
+<!-- Ce sont les colonnes de plusieurs images--
 <div class="container-fluid">
     <div class="row">
         <div class="col-12 col-md-6 col-xl-4  fondBleu">
@@ -126,6 +137,8 @@ Dernière modification : 03-06-2020
     </div>
 </div>
 -->
+
+
 <script src="https://kit.fontawesome.com/a46d75ba7a.js"></script>
 <script src="bootstrap-4.0.0-dist/js/bootstrap.js"></script>
 </body>
