--- a/DioceseKpalime/index.html
+++ b/DioceseKpalime/index.html
@@ -8,8 +8,9 @@ Dernière modification : 03-06-2020
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Bienvenue dans le diocèse de Kpalimé</title>
     <link rel="stylesheet" href="bootstrap-4.0.0-dist/css/bootstrap.css">
+    <link rel="icon" type="image/png" href="img/logo.png" />
     <link rel="stylesheet" href="css/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
