--- a/DioceseKpalime/index.html
+++ b/DioceseKpalime/index.html
@@ -21,9 +21,9 @@ Dernière modification : 03-06-2020
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
-    
+
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
+        <ul class="navbar-nav mx-auto">
             <li class="nav-item active">
                 <a class="nav-link" href="#">Accueil</a>
             </li>
@@ -48,6 +48,7 @@ Dernière modification : 03-06-2020
         </ul>
     </div>
 </nav>
+
 
 <div class="container-fluid text-center" id="banniere">
     <div class="row">
