--- a/ExercicePortailCegepThetfordMine/index.html
+++ b/ExercicePortailCegepThetfordMine/index.html
@@ -114,6 +114,16 @@ Dernière modification : 15-06-2020
     </div>
 </div>
 
+<div class="container-fluid text-center parallax2" id="partie4" >
+    <div class="row">
+        <div class="col-12 col-xl-6 offset-xl-3">
+            <h2> Nous joindre </h2>
+            <hr id="separation3">
+
+        </div>
+    </div>
+</div>
+
 
 
 <!-- Ce sont les colonnes de plusieurs images--
