--- a/DioceseKpalime/index.html
+++ b/DioceseKpalime/index.html
@@ -57,6 +57,7 @@ Dernière modification : 15-06-2020
         <div class="col-xl-12">
             <!-- Le titre de la banniere-->
          <h1> Bienvenue dans le diocèse de Kpalimé !</h1>
+            <h2> Nous sommes présentement en maintenance!</h2> <br/>  <h2> Merci de revenir plus tard ! </h2>
             <hr>
 
         </div>
@@ -66,7 +67,7 @@ Dernière modification : 15-06-2020
 <div class="container-fluid text-center" id="partie2">
     <div class="row">
         <div class="col-12 col-xl-6 offset-xl-3">
-            <h2> Jubilaté Deo!</h2> <br/>  <h2> Jubilaté Omnis terra !</h2>
+            <h2> Nous sommes en maintenance!</h2> <br/>  <h2> Merci de revenir plus tard ! </h2>
             <hr id="separation2">
             <p class="buttonTrouveSurInternet">Nous sommes le peuple que sa main conduit. Marchons à la suite du Christ.Le Diocèse de Kpalimé est l'un des 7 diocèses du Togo (Afrique de l'Ouest) . Il couvre une superficie de 6444 km². Le 1er juillet 1994, Kpalimé fut érigé en Diocèse par le pape Saint Jean-Paul II. Le 1er évêque fut Mgr Pierre Koffi SÉSHIE (1994-2000). L’actuel Pasteur du Diocèse est Mgr Benoît Comlan Messan ALOWONOU</p>
             <button type="button" class="buttonTrouveSurInternet">Lire la suite !</button>
@@ -77,30 +78,30 @@ Dernière modification : 15-06-2020
 <div class="container text-center">
     <div class="row" id="atYourService">
         <div class="col-12">
-            <h3> Il était une fois!</h3>
+            <h3> Dieu!</h3>
             <hr>
         </div>
     </div>
     <div class="row">
         <div class="col-12 col-md-6 col-xl-3  ">
-            <img src="img/ucao.jpg"/>
-            <h4> sous-titre</h4>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since </p>
+            <img src="img/Armoirie.jpg" height="245" width="245"/>
+            <h4>Homélies </h4>
+            <p> Mais à tous ceux qui l'ont reçue, à ceux qui croient en son nom, elle a donné le pouvoir de devenir enfants de Dieu” (Jean 1.12) </p>
         </div>
         <div class="col-12 col-md-6 col-xl-3  ">
-            <img src="img/ucao.jpg"/>
-            <h4> sous-titre</h4>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since </p>
+            <img src="img/Armoirie.jpg" height="245" width="245"/>
+            <h4> Publications </h4>
+            <p> Mais à tous ceux qui l'ont reçue, à ceux qui croient en son nom, elle a donné le pouvoir de devenir enfants de Dieu” (Jean 1.12) </p>
         </div>
         <div class="col-12 col-md-6 col-xl-3  ">
-            <img src="img/ucao.jpg"/>
-            <h4> sous-titre</h4>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since </p>
+            <img src="img/Armoirie.jpg" height="245" width="245"/>
+            <h4> Enseignement</h4>
+            <p> Mais à tous ceux qui l'ont reçue, à ceux qui croient en son nom, elle a donné le pouvoir de devenir enfants de Dieu” (Jean 1.12) </p>
         </div>
         <div class="col-12 col-md-6 col-xl-3  ">
-            <img src="img/ucao.jpg"/>
-            <h4> sous-titre</h4>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since </p>
+            <img src="img/Armoirie.jpg" height="245" width="245"/>
+            <h4> Café spirituel</h4>
+            <p>Mais à tous ceux qui l'ont reçue, à ceux qui croient en son nom, elle a donné le pouvoir de devenir enfants de Dieu” (Jean 1.12) </p>
         </div>
     </div>
 </div>
@@ -109,7 +110,11 @@ Dernière modification : 15-06-2020
     <div class="row">
         <div class="col-12 col-xl-6 offset-xl-3">
             <h2> Nous joindre </h2>
+            <h2> EVECHE BP 83, Kpalimé - Togo Kpalimé</h2>
             <hr id="separation3">
+            <h2> Tel:  +228 24 41 03 45</h2>
+            <h2> Courriel:   </h2>
+
 
         </div>
     </div>
