--- a/DioceseKpalime/index.html
+++ b/DioceseKpalime/index.html
@@ -12,10 +12,13 @@ Dernière modification : 15-06-2020
     <meta charset="UTF-8">
     <title>Bienvenue dans le diocèse de Kpalimé</title>
     <link rel="stylesheet" href="bootstrap-4.0.0-dist/css/bootstrap.css">
-    <link rel="icon" type="image/png" href="img/logo.png" />
+    <link rel="icon" type="image/png" href="img/logo.jpg" />
     <link rel="stylesheet" href="css/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
+<header>
+
+</header>
 
 <body>
 <nav class="navbar navbar-light bg-light navbar-expand-lg">
@@ -30,16 +33,13 @@ Dernière modification : 15-06-2020
                 <a class="nav-link" href="#">Accueil</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Le diocèse</a>
+                <a class="nav-link" href="#">Diocèse</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">Actualités</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">Services</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Homélies</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">Faire un don</a>
@@ -50,77 +50,91 @@ Dernière modification : 15-06-2020
         </ul>
     </div>
 </nav>
+<!--section bannière- -->
 
+<!--section bannière- -->
+<section id="section1">
+    <div class="container-fluid text-center" id="banniere">
+        <div class="row">
+            <div class="col-xl-12">
 
-<div class="container-fluid text-center" id="banniere">
-    <div class="row">
-        <div class="col-xl-12">
-            <!-- Le titre de la banniere-->
-         <h1> Bienvenue dans le diocèse de Kpalimé !</h1>
-            <h2> Nous sommes présentement en maintenance!</h2> <br/>  <h2> Merci de revenir plus tard ! </h2>
-            <hr>
+            </div>
+        </div>
+    </div>
+</section>
 
+<!--section bannière- -->
+<section id="section2">
+    <div class="container-fluid text-center parallax" id="partie2">
+        <div class="row">
+            <div class="col-12 col-xl-6 offset-xl-3">
+                <h2> Bienvenue dans le diocèse de Kpalimé!</h2> <br/>  <h2> Nous sommes le peuple qu"il conduit de sa main </h2>
+                <hr id="separation2">
+
+                <button type="button" class="buttonTrouveSurInternet">Lire la suite !</button>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section id="section3">
+    <div class="container  text-center">
+        <div class="row" id="atYourService">
+            <div class="col-12">
+                <h3> Évenements à venir</h3>
+                <hr>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12 col-md-6 col-xl-3  ">
+                <img src="img/Alowonou_Benoit_Buste.jpg" height="245" width="245"/>
+                <h4>Mgr Alowonou</h4>
+                <p> Mais à tous ceux qui l'ont reçue, à ceux qui croient en son nom, elle a donné le pouvoir de devenir enfants de Dieu” (Jean 1.12) </p>
+            </div>
+            <div class="col-12 col-md-6 col-xl-3  ">
+                <img src="img/Kpalime4.jpg" height="245" width="245"/>
+                <h4> Publications </h4>
+                <p> Mais à tous ceux qui l'ont reçue, à ceux qui croient en son nom, elle a donné le pouvoir de devenir enfants de Dieu” (Jean 1.12) </p>
+            </div>
+            <div class="col-12 col-md-6 col-xl-3  ">
+                <img src="img/Jubile_Argent0.jpg" height="245" width="245"/>
+                <h4> Enseignement</h4>
+                <p> Mais à tous ceux qui l'ont reçue, à ceux qui croient en son nom, elle a donné le pouvoir de devenir enfants de Dieu” (Jean 1.12) </p>
+            </div>
+            <div class="col-12 col-md-6 col-xl-3 ">
+                <img src="img/Jubile_Argent1.jpg" height="245" width="245"/>
+                <h4> Café spirituel</h4>
+                <p>Mais à tous ceux qui l'ont reçue, à ceux qui croient en son nom, elle a donné le pouvoir de devenir enfants de Dieu” (Jean 1.12) </p>
+            </div>
+        </div>
+    </div>
+
+</section>
+
+    <div class="container-fluid text-center" id="partie4">
+        <div class="row">
+            <div class="col-12 col-xl-6 offset-xl-3">
+                <h2> Nous joindre </h2>
+                <h2> EVECHE BP 83, Kpalimé - Togo Kpalimé</h2>
+                <hr id="separation3">
+                <h2> Tel:  +228 24 41 03 45</h2>
+                <h2> Courriel:alowonoubenoit@yahoo.fr  </h2>
+            </div>
         </div>
     </div>
 </div>
 
-<div class="container-fluid text-center" id="partie2">
-    <div class="row">
-        <div class="col-12 col-xl-6 offset-xl-3">
-            <h2> Nous sommes en maintenance!</h2> <br/>  <h2> Merci de revenir plus tard ! </h2>
-            <hr id="separation2">
-            <p class="buttonTrouveSurInternet">Nous sommes le peuple que sa main conduit. Marchons à la suite du Christ.Le Diocèse de Kpalimé est l'un des 7 diocèses du Togo (Afrique de l'Ouest) . Il couvre une superficie de 6444 km². Le 1er juillet 1994, Kpalimé fut érigé en Diocèse par le pape Saint Jean-Paul II. Le 1er évêque fut Mgr Pierre Koffi SÉSHIE (1994-2000). L’actuel Pasteur du Diocèse est Mgr Benoît Comlan Messan ALOWONOU</p>
-            <button type="button" class="buttonTrouveSurInternet">Lire la suite !</button>
-        </div>
-    </div>
-</div>
-
-<div class="container text-center">
-    <div class="row" id="atYourService">
-        <div class="col-12">
-            <h3> Dieu!</h3>
-            <hr>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-12 col-md-6 col-xl-3  ">
-            <img src="img/Armoirie.jpg" height="245" width="245"/>
-            <h4>Homélies </h4>
-            <p> Mais à tous ceux qui l'ont reçue, à ceux qui croient en son nom, elle a donné le pouvoir de devenir enfants de Dieu” (Jean 1.12) </p>
-        </div>
-        <div class="col-12 col-md-6 col-xl-3  ">
-            <img src="img/Armoirie.jpg" height="245" width="245"/>
-            <h4> Publications </h4>
-            <p> Mais à tous ceux qui l'ont reçue, à ceux qui croient en son nom, elle a donné le pouvoir de devenir enfants de Dieu” (Jean 1.12) </p>
-        </div>
-        <div class="col-12 col-md-6 col-xl-3  ">
-            <img src="img/Armoirie.jpg" height="245" width="245"/>
-            <h4> Enseignement</h4>
-            <p> Mais à tous ceux qui l'ont reçue, à ceux qui croient en son nom, elle a donné le pouvoir de devenir enfants de Dieu” (Jean 1.12) </p>
-        </div>
-        <div class="col-12 col-md-6 col-xl-3  ">
-            <img src="img/Armoirie.jpg" height="245" width="245"/>
-            <h4> Café spirituel</h4>
-            <p>Mais à tous ceux qui l'ont reçue, à ceux qui croient en son nom, elle a donné le pouvoir de devenir enfants de Dieu” (Jean 1.12) </p>
-        </div>
-    </div>
-</div>
-
-<div class="container-fluid text-center" id="partie4">
+<div class="container-fluid text-center" id="partie5">
     <div class="row">
         <div class="col-12 col-xl-6 offset-xl-3">
             <h2> Nous joindre </h2>
             <h2> EVECHE BP 83, Kpalimé - Togo Kpalimé</h2>
-            <hr id="separation3">
+            <hr id="separation4">
             <h2> Tel:  +228 24 41 03 45</h2>
-            <h2> Courriel:   </h2>
-
-
+            <h2>Courriel:alowonoubenoit@yahoo.fr</h2>
         </div>
     </div>
 </div>
-
-
 
 <!-- Ce sont les colonnes de plusieurs images--
 <div class="container-fluid">
